# may_postgres

./: Cargo.toml  README.md
src/: binary_copy.rs  bind.rs  cancel_query.rs  cancel_query_raw.rs  cancel_token.rs  client.rs  codec.rs  config.rs  connect.rs  connect_raw.rs  connect_socket.rs  connect_tls.rs  connection.rs  connection_unix.rs  copy_in.rs  copy_out.rs  generic_client.rs  into_buf.rs  lib.rs  maybe_tls_stream.rs  portal.rs  prepare.rs  query.rs  queued_writer.rs  row.rs  simple_query.rs  socket.rs  statement.rs  tls.rs  to_statement.rs  transaction.rs  transaction_builder.rs  try_iterator.rs  vec_buf.rs
src/error/: mod.rs  sqlstate.rs
tests/test/: binary_copy.rs  main.rs  parse.rs  runtime.rs
tests/test/types/: bit_vec_06.rs  bit_vec_07.rs  chrono_04.rs  eui48_04.rs  geo_010.rs  mod.rs  serde_json_1.rs  uuid_07.rs  uuid_08.rs
