[package]
name = "may_postgres"
version = "0.1.0"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
description = "A coroutine based PostgreSQL client"
repository = "https://github.com/Xudong-Huang/may_postgres"
readme = "README.md"
keywords = ["database", "postgres", "postgresql", "sql", "async"]
categories = ["database"]

[package.metadata.docs.rs]
all-features = true

[badges]
circle-ci = { repository = "Xudong-Huang/may-postgres" }

[features]
default = []

with-bit-vec-0_6 = ["postgres-types/with-bit-vec-0_6"]
with-chrono-0_4 = ["postgres-types/with-chrono-0_4"]
with-eui48-0_4 = ["postgres-types/with-eui48-0_4"]
with-geo-types-0_4 = ["postgres-types/with-geo-types-0_4"]
with-serde_json-1 = ["postgres-types/with-serde_json-1"]
with-uuid-0_8 = ["postgres-types/with-uuid-0_8"]

[dependencies]
log = "0.4"
may = "0.3"
phf = "0.8"
spin = "0.9"
bytes = "0.5"
smallvec = "1"
byteorder = "1"
crossbeam = "0.8"
postgres-types = "0.1"
percent-encoding = "2"
fallible-iterator = "0.2"
postgres-protocol = "0.5"


[dev-dependencies]
env_logger = "0.7"

bit-vec-06 = { version = "0.6", package = "bit-vec" }
chrono-04 = { version = "0.4", package = "chrono" }
eui48-04 = { version = "0.4", package = "eui48" }
geo-types-04 = { version = "0.4", package = "geo-types" }
serde-1 = { version = "1.0", package = "serde" }
serde_json-1 = { version = "1.0", package = "serde_json" }
uuid-08 = { version = "0.8", package = "uuid" }

[profile.release]
lto = true
